--- a/angular/angular-template/src/app/component/contact/contact.component.html
+++ b/angular/angular-template/src/app/component/contact/contact.component.html
@@ -6,7 +6,7 @@
         <form [formGroup]="contactForm" *ngIf="this.contactForm" (ngSubmit)="onSubmit()">
           <div class="form-row">
             <H3 style="text-align: center; min-width: 100%"> Thông tin liên hệ</H3>
-            <span style="font-size: 15px; text-decoration: underline solid; min-width: 100%; text-align: center; margin-bottom:15px">Nếu là khách hàng cũ chỉ cần nhập số điện thoại và email</span>
+            <strong style="font-size: 15px; text-decoration: underline solid; min-width: 100%; text-align: center; margin-bottom:15px">Nếu là khách hàng cũ chỉ cần nhập số điện thoại và email</strong>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
