--- a/angular/angular-template/src/app/new/new-list/new-list.component.css
+++ b/angular/angular-template/src/app/new/new-list/new-list.component.css
@@ -1,6 +1,5 @@
-
+@import url(https://fonts.googleapis.com/css?family=Satisfy);
 @import url(https://fonts.googleapis.com/css?family=Six+Caps);
-
 @font-face {
   font-family: Mukta;
   src: url('https://fonts.googleapis.com/css?family=Mukta:700');
@@ -11,6 +10,7 @@
   background-color: #EDEDED;
 }
 .card{
+
 }
 .news-hightlight-name, .name-new-left{
   color: black ;
@@ -20,10 +20,6 @@
 }
 .list-news-left:hover{
   background-color: #EDEDED;
-
-}
-.btn-outline-search{
-  background-color: #66C992;
 
 }
 .btn-outline-search{
@@ -49,47 +45,26 @@ height: 50px; */
   min-height: 500px
 } */
 .contact-div{
-  width: 70%;
   /* width: 70%; */
-
   min-height: 150px;
   background-color: black;
   margin: auto;
   position:relative;
   display:flex;
-
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
   /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-
   letter-spacing: 1.5px;
 }
 .btn-contact{
   margin: auto;
   background-color: white;
   border-radius: 0;
-
-  font-family: 'Mukta', sans-serif;
-
   /* font-family: 'Mukta', sans-serif; */
-
   font-weight: lighter;
   letter-spacing: 2px;
   font-size: 15px;
 }
 .btn-contact:hover{
   background-color: transparent;
-
-  border: 1px solid #FFFFFF;
-  color: #EDEDED;
-}
-#btn-contact{
-}
-.btn-contact{
-}
-.center-contact{
-  /* align-content: center ; */
-
   border: 1px solid #ffffff;
   color: #EDEDED;
 }
@@ -100,18 +75,16 @@ height: 50px; */
 
 }
 .center-contact{
-/* align-content: center ; */
-
+  /* align-content: center ; */
 }
 .sp-text-mid{
   color: #F47F24;
 }
 .a-contact{
   background-image: linear-gradient(
-
     to right,
-    #54B3D6,
-    #54B3D6 50%,
+    #54b3d6,
+    #54b3d6 50%,
     rgb(255, 255, 255) 50%
   );
   background-size: 200% 100%;
@@ -128,29 +101,7 @@ height: 50px; */
 }
 .a-contact:before {
   content: '';
-  /*background: #54B3D6;*/
-
-    /*  to right,*/
-    /*  #54b3d6,*/
-    /*  #54b3d6 50%,*/
-    /*  rgb(255, 255, 255) 50%*/
-    /*);*/
-    background-size: 200% 100%;
-    background-position: -100%;
-    display: inline-block;
-    /* padding: 5px 0; */
-    position: relative;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transition: all 0.3s ease-in-out;
-    font-weight: 500px;
-    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-    letter-spacing: 1.5px;
-}
-.a-contact:before {
-  content: '';
   background: #54b3d6;
-
   display: block;
   position: absolute;
   bottom: -3px;
@@ -164,11 +115,6 @@ height: 50px; */
   background-position: 0;
 }
 
-.a-contact:hover {
- background-position: 0;
-}
-
-
 .a-contact:hover::before {
   width:100%;
 }
@@ -179,13 +125,7 @@ height: 50px; */
 
 }
 .btn-outline-search2{
-  background-color: #54B3D6;
-
-
-}
-.btn-outline-search2{
   background-color: #54b3d6;
-
 
   border-radius: 0;
 }
@@ -218,25 +158,20 @@ font-family: 'News Cycle', sans-serif; */
     background-color: black;
 } */
 .pagination-news{
-    color: black;
+  color: black;
 }
 .pagination-news:hover{
   color: rgb(255, 255, 255);
   background-color: black;
 }
-
-.name-list-news{
-  background-color: black;
-  color: #FFFFFF;
 /* .name-list-news{
   padding: 0;
-  margin: 0;*/
-}
+  margin: 0;
+} */
 .hr-name{
   background-color: black;
   width: 100%;
   height: 10px;
-
 }
 .nav-link-true{
   display: block;
@@ -253,7 +188,6 @@ font-family: 'News Cycle', sans-serif; */
   background-color: transparent;
   color: black;
 }
-
 .nav-link-lr-true{
   display: block;
   padding: 0.5rem 1rem;
@@ -380,15 +314,15 @@ font-family: 'News Cycle', sans-serif; */
   display: block;
 }
 .text {
-   overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   line-height: 18px;     /* fallback */
-   max-height: 72px;      /* fallback */
-   -webkit-line-clamp: 4; /* number of lines to show */
-   -webkit-box-orient: vertical;
-   margin-bottom: 15px;
-   /* font-family: inherit; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 18px;     /* fallback */
+  max-height: 72px;      /* fallback */
+  -webkit-line-clamp: 4; /* number of lines to show */
+  -webkit-box-orient: vertical;
+  margin-bottom: 15px;
+  /* font-family: inherit; */
 }
 .name-title-news{
   background-color: #F47F24;
@@ -428,8 +362,8 @@ font-family: 'News Cycle', sans-serif; */
 
 }
 .name-news-1{
-font-family: 'Libre Bodoni', serif;
-font-weight: bold;
+  font-family: 'Libre Bodoni', serif;
+  font-weight: bold;
 }
 .content-news-1, .date-news-1{
   font-family: 'Heebo', sans-serif;
@@ -497,4 +431,3 @@ font-weight: bold;
   from{margin-left: -55px;}
   to{margin-left: 65px;}
 }
-
