--- a/angular/angular-template/src/app/new/new-list/new-list.component.html
+++ b/angular/angular-template/src/app/new/new-list/new-list.component.html
@@ -5,7 +5,7 @@
     <div class="m-auto text-center center-contact">
       <H1 class=" text-center text-white"><span class="sp-text-mid">Nâng Cao</span> Kiến Thức Chăn Nuôi</H1>
       <!-- <button class="btn btn-contact text-uppercase" id="btn-contact">Contact <i class="fa-solid fa-arrow-right-long"></i></button> -->
-      <a class="text-uppercase a-contact" href="#">Contact <i class="fa-solid fa-arrow-right-long"></i></a>
+      <a class="text-uppercase a-contact" href="#" [routerLink]="['/contact']">Contact <i class="fa-solid fa-arrow-right-long"></i></a>
     </div>
   </div>
 
@@ -419,7 +419,7 @@
     <div class="m-auto text-center center-contact">
       <H1 class=" text-center text-white"><span class="sp-text-mid">Nâng Cao</span> Kiến Thức Chăn Nuôi</H1>
       <!-- <button class="btn btn-contact text-uppercase" id="btn-contact">Contact <i class="fa-solid fa-arrow-right-long"></i></button> -->
-      <a class="text-uppercase a-contact" href="#">Contact <i class="fa-solid fa-arrow-right-long"></i></a>
+      <a class="text-uppercase a-contact" href="#" [routerLink]="['/contact']">Contact <i class="fa-solid fa-arrow-right-long"></i></a>
     </div>
   </div>
 
