--- a/angular/angular-template/src/app/sercurity/login/login.component.html
+++ b/angular/angular-template/src/app/sercurity/login/login.component.html
@@ -35,7 +35,8 @@
               <div class="below-contain">
 
                 <div class="check-remember">
-
+                  <!--                  <input type="checkbox" id="remember" class="checkbox" formControlName="remember_account"/>-->
+                  <!--                  <label for="remember" style="word-wrap:break-word" >Nhớ tài khoản</label>-->
                   <label for="remember" class="checkbox">
                     <input type="checkbox" id="remember" class="checkbox" formControlName="remember_account"/>Nhớ tài khoản
                   </label>
