--- a/angular/angular-template/src/app/cage/cage-create/cage-create.component.html
+++ b/angular/angular-template/src/app/cage/cage-create/cage-create.component.html
@@ -10,24 +10,16 @@
         </a>
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
-          <li class="nav-item">
-            <a [routerLink]="['/admin/employee']" class="nav-link " aria-current="page">
-              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-              Quản lý nhân viên
-            </a>
-          </li>
-
           <li>
-            <a [routerLink]="['/employee/entities']" class="nav-link">
-              <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-              Quản lý cá thể
-            </a>
-          </li>
-
-          <li>
-            <a [routerLink]="['/employee/cage']" class="nav-link active">
+            <a [routerLink]="['/employee/cage']"class="nav-link active">
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
               Quản lý chuồng nuôi
+            </a>
+          </li>
+          <li class="nav-item">
+            <a [routerLink]="['/employee/entities']" class="nav-link" aria-current="page">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+              Quản lý cá thể
             </a>
           </li>
 
