--- a/angular/angular-template/src/app/cage/cage-list/cage-list.component.html
+++ b/angular/angular-template/src/app/cage/cage-list/cage-list.component.html
@@ -1,5 +1,4 @@
 
-
 <div class="container-fluid " id="content" style="margin-top: 50px">
   <div class="row">
     <div class="col-lg-2 ml-0">
@@ -11,17 +10,16 @@
         </a>
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
-          <li class="nav-item">
-            <a [routerLink]="['/admin/employee']" class="nav-link" aria-current="page">
-              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-              Quản lý nhân viên
-            </a>
-          </li>
-
           <li>
-            <a [routerLink]="['/employee/entities']"class="nav-link active">
+            <a [routerLink]="['/employee/cage']"class="nav-link active">
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
               Quản lý chuồng nuôi
+            </a>
+          </li>
+          <li class="nav-item">
+            <a [routerLink]="['/employee/entities']" class="nav-link" aria-current="page">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+              Quản lý cá thể
             </a>
           </li>
 
@@ -114,15 +112,15 @@
 
               <tbody>
               <tr *ngFor="let cage of listCage">
-                <td>{{cage.cageId}}</td>
+                <td class="text-center">{{cage.cageId}}</td>
                 <td>{{cage.employeeName}}</td>
-                <td>{{cage.entitiesQuantity}}/{{cage.quantity}}</td>
-                <td>{{cage.createdDate|date:"dd-MM-yyyy"}}</td>
-                <td>{{cage.closedDate|date:"dd-MM-yyyy"}}</td>
-                <td>
+                <td class="text-center">{{cage.entitiesQuantity}}/{{cage.quantity}}</td>
+                <td class="text-center">{{cage.createdDate|date:"dd-MM-yyyy"}}</td>
+                <td class="text-center">{{cage.closedDate|date:"dd-MM-yyyy"}}</td>
+                <td class="text-center">
                   <button class="btn" [routerLink]="['edit/'+ cage.cageId]"><i class="fa-solid fa-pen-clip" style="color: blue;"></i></button>
                 </td>
-                <td>
+                <td class="text-center">
                   <button class="btn" (click)="getListEntitiesByCage(cage.cageId)"><i class="fa-solid fa-eye" style="color: blue;"></i></button>
                 </td>
               </tr>
@@ -153,7 +151,7 @@
                   </li>
                 </ul>
 
-<!--                Phan trang khi tim kiem-->
+                <!--                Phan trang khi tim kiem-->
 
                 <ul class="pagination justify-content-end" style="justify-content: center" *ngIf="isSearch==true" >
                   <li class="nav-item">
