--- a/angular/angular-template/src/app/notification/notification-edit/notification-edit.component.html
+++ b/angular/angular-template/src/app/notification/notification-edit/notification-edit.component.html
@@ -79,7 +79,7 @@
             <div class="col-sm-8">
               <div class="input-group mb-3">
                 <textarea type="text" class="form-control" min="1" type="text" value="1" rows="6"
-                          formControlName="content"></textarea>
+                          formControlName="content" (change)="compare()"></textarea>
                 <!--                <div class="input-group-append">-->
                 <!--                  <span class="input-group-text" id="basic-addon2">kg</span>-->
                 <!--                </div>-->
