--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -92,7 +92,7 @@
                 <td>{{employee.employeeName| uppercase}}</td>
                 <td>{{employee.accountName}}</td>
                 <td>{{employee.email}}</td>
-                <td>{{employee.birthday | date: "yyyy-MM-dd"}}</td>
+                <td>{{employee.birthday | date: "dd-MM-yyyy"}}</td>
                 <td>{{employee.gender}}</td>
                 <td>{{employee.idCard}}</td>
                 <td>{{employee.address}}</td>
