--- a/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
+++ b/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
@@ -96,15 +96,6 @@
             </div>
           </div>
 
-<!--          <div class="form-group row" >-->
-<!--            <label  class="col-form-label ml-3" style="width: 150px;">Account ID<span class="text-danger">*</span></label>-->
-<!--            <div class="col-sm-8">-->
-<!--              <div class="input-append date" id="dp20" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
-<!--                <input disable class="span2 form-control" size="16" type="text" formControlName="accountId">-->
-<!--                <span style="color: red;"></span>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
 
           <input hidden class="span2 form-control" size="16" type="text" formControlName="accountId">
 
@@ -134,18 +125,17 @@
             </div>
           </div>
 
-<!--          <div class="form-group row" >-->
-<!--            <label  class="col-form-label ml-3" style="width: 150px;">Xác nhận mật khẩu<span class="text-danger">*</span></label>-->
-<!--            <div class="col-sm-8">-->
-<!--              <div class="input-append date" id="" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
-<!--                <input class="span2 form-control" size="16" type="password" formControlName="password">-->
-<!--                <div style="color: red;"  *ngFor="let validation of validationMessages.password">-->
-<!--                <span *ngIf="employeeForm.get('password').hasError(validation.type) && (employeeForm.get('password').dirty || employeeForm.get('password').touched)">-->
-<!--                {{validation.message}}</span>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
+          <div class="form-group row" >
+            <label  class="col-form-label ml-3" style="width: 150px;">Xac nhận mật khẩu<span class="text-danger">*</span></label>
+            <div class="col-sm-8">
+              <div class="input-append date" id="" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+                <input class="span2 form-control" size="16" type="password" formControlName="confirmPassword" [(ngModel)]="employee.password">
+                <div style="color: red;"  *ngFor="let validation of validationMessages.confirmPassword">
+                  <span *ngIf="employeeForm.hasError('notMatch') && (employeeForm.touched)"> Mật khẩu không trùng khớp, vui lòng nhập lại!</span>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="form-group row" >
             <label  class="col-form-label ml-3" style="width: 150px;">Email<span class="text-danger">*</span></label>
